--- a/i18n/es_ES.yaml
+++ b/i18n/es_ES.yaml
@@ -326,9 +326,7 @@ backend:
       name:
         other: grosero u ofensivo
       desc:
-        other:
-          - Una persona razonable consideraría este contenido como inapropiado
-          - discurso.
+        other: "A reasonable person would find this content inappropriate for respectful discourse."
     a_duplicate:
       name:
         other: un duplicado
@@ -340,10 +338,7 @@ backend:
       name:
         other: no es una respuesta
       desc:
-        other:
-          - Esto fue publicado como respuesta, pero no responde la
-          - pregunta. Podría ser una edición, un comentario, otra pregunta,
-          - o borrado por completo.
+        other: "This was posted as an answer, but it does not attempt to answer the question. It should possibly be an edit, a comment, another question,or deleted altogether."
     no_longer_needed:
       name:
         other: ya no es necesario
@@ -402,9 +397,7 @@ backend:
         name:
           other: necesita más detalles o aclaraciónes
         desc:
-          other:
-            - Esta pregunta actualmente incluye múltiples preguntas en una. Debería
-            - centrarse en un problema solamente.
+          other: This question currently includes multiple questions in one. It should focus on one problem only.
       other:
         name:
           other: otra razón
@@ -794,7 +787,7 @@ ui:
   how_to_format:
     title: Cómo formatear
     desc: >-
-      <ul class="mb-0"> <li><p class="mb-2">Para hacer enlaces</p> <pre class="mb-2"> <code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com) </code> </pre> </li> <li><p class="mb-2">Colocar saltos de línea entre párrafos</p></li> <li><p class="mb-2"><em>_cursiva_</em> o **<strong>negrita</strong>**</p></li> <li><p class="mb-2">Indentar el código con 4 espacios</p></li> <li><p class="mb-2">Citar colocando <code>&gt;</code> al inicio de la línea</p></li> <li><p class="mb-2">Escape con backticks <code>`como _esto_`</code></p></li> <li><p class="mb-2">Crear barreras de código con backticks <code>`</code></p> <pre class="mb-0"> <code> ```<br/> código aquí<br/> ``` </code> </pre> </li> </ul>
+      <ul class="mb-0"><li><p class="mb-2">link question or answer: <code>#10010000000000001</code></p></li> <li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
   pagination:
     prev: Anterior
     next: Siguiente
@@ -1341,6 +1334,10 @@ ui:
   related_question:
     title: Preguntas relacionadas
     answers: respuestas
+  linked_question:
+    title: Linked Questions
+    description: Questions linked to
+    no_linked_question: No questions linked from this question.
   invite_to_answer:
     title: Personas Preguntadas
     desc: Selecciona personas que creas que sepan la respuesta.
@@ -1559,6 +1556,7 @@ ui:
     top_questions: Preguntas Principales
     stats: Estadísticas
     list_empty: No se encontraron publicaciones.<br />¿Quizás le gustaría seleccionar una pestaña diferente?
+    content_empty: No posts found.
     accepted: Aceptada
     answered: respondida
     asked: preguntó
