--- a/i18n/pl_PL.yaml
+++ b/i18n/pl_PL.yaml
@@ -146,7 +146,7 @@ backend:
       invalid_url:
         other: Nieprawidłowy URL.
       status_invalid:
-        other: Invalid status.
+        other: Nieprawidłowy status.
     password:
       space_invalid:
         other: Hasło nie może zawierać spacji.
@@ -326,9 +326,7 @@ backend:
       name:
         other: niegrzeczny lub obraźliwy
       desc:
-        other:
-          - Rozsądna osoba uznałaby tę treść za nieodpowiednią do dyskusji opartej na szacunku
-          - dyskomfort.
+        other: "A reasonable person would find this content inappropriate for respectful discourse."
     a_duplicate:
       name:
         other: duplikat
@@ -340,10 +338,7 @@ backend:
       name:
         other: nie jest odpowiedzią
       desc:
-        other:
-          - To zostało opublikowane jako odpowiedź, ale nie próbuje odpowiedzieć na
-          - pytanie. Powinna być prawdopodobnie edytowana, opatrzona komentarzem, kolejnym pytaniem,
-          - lub całkowicie usunięta.
+        other: "This was posted as an answer, but it does not attempt to answer the question. It should possibly be an edit, a comment, another question,or deleted altogether."
     no_longer_needed:
       name:
         other: nie jest już potrzebne
@@ -402,9 +397,7 @@ backend:
         name:
           other: wymaga szczegółów lub wyjaśnienia
         desc:
-          other:
-            - This question currently includes multiple questions in one. It should
-            - focus on one problem only.
+          other: This question currently includes multiple questions in one. It should focus on one problem only.
       other:
         name:
           other: coś innego
@@ -420,12 +413,12 @@ backend:
     deleted_title:
       other: Usunięte pytanie
     questions_title:
-      other: Questions
+      other: Pytania
   tag:
     tags_title:
-      other: Tags
+      other: Tagi
     no_description:
-      other: The tag has no description.
+      other: Tag nie posiada opisu.
   notification:
     action:
       update_question:
@@ -536,57 +529,57 @@ backend:
     default_badges:
       autobiographer:
         name:
-          other: Autobiographer
+          other: Autobiografista
         desc:
           other: Filled out <a href="{{ .ProfileURL }}" target="_blank">profile</a> information.
       certified:
         name:
-          other: Certified
+          other: Certyfikowany
         desc:
-          other: Completed our new user tutorial.
+          other: Ukończono nasz nowy samouczek.
       editor:
         name:
-          other: Editor
+          other: Edytor
         desc:
           other: First post edit.
       first_flag:
         name:
-          other: First Flag
+          other: Pierwsza flaga
         desc:
           other: First flagged a post.
       first_upvote:
         name:
-          other: First Upvote
+          other: Pierwszy pozytywny głos
         desc:
           other: First up voted a post.
       first_link:
         name:
-          other: First Link
+          other: Pierwszy odnośnik
         desc:
           other: First dirst added a link to another post.
       first_reaction:
         name:
-          other: First Reaction
+          other: Pierwsza Reakcja
         desc:
           other: First reacted to the post.
       first_share:
         name:
-          other: First Share
+          other: Pierwsze udostępnianie
         desc:
           other: First shared a post.
       scholar:
         name:
           other: Scholar
         desc:
-          other: Asked a question and accepted an answer.
+          other: Zadane pytania i zaakceptowane odpowiedź.
       commentator:
         name:
           other: Commentator
         desc:
-          other: Leave 5 comments.
+          other: Pozostaw 5 komentarzy.
       new_user_of_the_month:
         name:
-          other: New User of the Month
+          other: Nowy użytkownik miesiąca
         desc:
           other: Outstanding contributions in their first month.
       read_guidelines:
@@ -794,7 +787,7 @@ ui:
   how_to_format:
     title: Jak formatować
     desc: >-
-      <ul class="mb-0"><li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url. com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt; </code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
+      <ul class="mb-0"><li><p class="mb-2">link question or answer: <code>#10010000000000001</code></p></li> <li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
   pagination:
     prev: Poprzedni
     next: Następny
@@ -1341,6 +1334,10 @@ ui:
   related_question:
     title: Powiązane pytania
     answers: odpowiedzi
+  linked_question:
+    title: Linked Questions
+    description: Questions linked to
+    no_linked_question: No questions linked from this question.
   invite_to_answer:
     title: Ludzie pytali
     desc: Wybierz osoby, które mogą znać odpowiedź.
@@ -1524,8 +1521,8 @@ ui:
     answers: Odpowiedzi
     newest: Najnowsze
     active: Aktywne
-    hot: Hot
-    recommend: Recommend
+    hot: Gorące
+    recommend: Polecane
     score: Ocena
     unanswered: Bez odpowiedzi
     modified: zmodyfikowane
@@ -1544,7 +1541,7 @@ ui:
     reputation: Reputacja
     comments: Komentarze
     votes: Głosy
-    badges: Badges
+    badges: Odznaczenia
     newest: Najnowsze
     score: Ocena
     edit_profile: Edytuj Profil
@@ -1559,6 +1556,7 @@ ui:
     top_questions: Najlepsze pytania
     stats: Statystyki
     list_empty: Nie znaleziono wpisów. <br />Być może chcesz wybrać inną kartę?
+    content_empty: No posts found.
     accepted: Zaakceptowane
     answered: Udzielone odpowiedzi
     asked: zapytano
@@ -1705,7 +1703,7 @@ ui:
     login_failed_email_tip: Logowanie nie powiodło się, przed ponowną próbą zezwól na dostęp tej aplikacji do informacji o Twojej skrzynce pocztowej.
   badges:
     modal:
-      title: Congratulations
+      title: Gratulacje
       content: You've earned a new badge.
       close: Close
       confirm: View badges
@@ -1795,10 +1793,10 @@ ui:
         fields:
           display_name:
             label: Display name
-            msg_range: Display name up to 30 characters.
+            msg_range: Wyświetlana nazwa użytkownika maksymalnie 30 znaków.
           username:
             label: Nazwa
-            msg_range: Username up to 30 characters.
+            msg_range: Nazwa użytkownika maksymalnie 30 znaków.
           email:
             label: Email
             msg_invalid: Błędny adresy email.
@@ -2128,10 +2126,10 @@ ui:
       deactivate: Deactivate
       filter:
         placeholder: Filter by name, badge:id
-      group: Group
+      group: Grupa
       inactive: Inactive
       name: Name
-      show_logs: Show logs
+      show_logs: Wyświetl dzienniki
       status: Status
       title: Badges
   form:
