--- a/i18n/uk_UA.yaml
+++ b/i18n/uk_UA.yaml
@@ -146,7 +146,7 @@ backend:
       invalid_url:
         other: Невірна URL.
       status_invalid:
-        other: Invalid status.
+        other: Неприпустимий статус.
     password:
       space_invalid:
         other: Пароль не може містити пробіли.
@@ -315,7 +315,7 @@ backend:
         other: Конфігурацію сайту не знайдено.
     badge:
       object_not_found:
-        other: Badge object not found
+        other: Об'єкт значка не знайдено
   reason:
     spam:
       name:
@@ -326,9 +326,7 @@ backend:
       name:
         other: грубо чи образливо
       desc:
-        other:
-          - Розсудлива людина вважатиме цей контент неприйнятним з точки зору шанобливого ставлення
-          - дискурс.
+        other: "A reasonable person would find this content inappropriate for respectful discourse."
     a_duplicate:
       name:
         other: дублікат
@@ -340,10 +338,7 @@ backend:
       name:
         other: не відповідь
       desc:
-        other:
-          - Це повідомлення було розміщено як відповідь, але воно не є спробою відповісти на
-          - запитання. Можливо, його слід відредагувати, додати коментар, поставити інше запитання
-          - або взагалі видалити.
+        other: "This was posted as an answer, but it does not attempt to answer the question. It should possibly be an edit, a comment, another question,or deleted altogether."
     no_longer_needed:
       name:
         other: більше не потрібно
@@ -402,9 +397,7 @@ backend:
         name:
           other: потребує деталей або ясності
         desc:
-          other:
-            - Наразі це запитання містить кілька запитань в одному. Воно має
-            - зосереджуватися лише на одній проблемі.
+          other: This question currently includes multiple questions in one. It should focus on one problem only.
       other:
         name:
           other: інше
@@ -420,10 +413,10 @@ backend:
     deleted_title:
       other: Видалене питання
     questions_title:
-      other: Questions
+      other: Питання
   tag:
     tags_title:
-      other: Tags
+      other: Теґи
     no_description:
       other: The tag has no description.
   notification:
@@ -515,7 +508,7 @@ backend:
     downvote:
       other: голос "проти"
     downvoted:
-      other: downvoted
+      other: проголосував проти
     accept:
       other: прийняти
     accepted:
@@ -541,14 +534,14 @@ backend:
           other: Filled out <a href="{{ .ProfileURL }}" target="_blank">profile</a> information.
       certified:
         name:
-          other: Certified
+          other: Підтверджений
         desc:
           other: Completed our new user tutorial.
       editor:
         name:
-          other: Editor
+          other: Редактор
         desc:
-          other: First post edit.
+          other: Перше редагування посту.
       first_flag:
         name:
           other: First Flag
@@ -561,12 +554,12 @@ backend:
           other: First up voted a post.
       first_link:
         name:
-          other: First Link
+          other: Перше посилання
         desc:
           other: First dirst added a link to another post.
       first_reaction:
         name:
-          other: First Reaction
+          other: Перша реакція
         desc:
           other: First reacted to the post.
       first_share:
@@ -576,34 +569,34 @@ backend:
           other: First shared a post.
       scholar:
         name:
-          other: Scholar
+          other: Вчений
         desc:
           other: Asked a question and accepted an answer.
       commentator:
         name:
-          other: Commentator
+          other: Коментатор
         desc:
-          other: Leave 5 comments.
+          other: Залиште 5 коментарів.
       new_user_of_the_month:
         name:
-          other: New User of the Month
+          other: Новий користувач місяця
         desc:
           other: Outstanding contributions in their first month.
       read_guidelines:
         name:
           other: Read Guidelines
         desc:
-          other: Read the [community guidelines].
+          other: Прочитайте [рекомендації для спільноти].
       reader:
         name:
-          other: Reader
+          other: Читач
         desc:
           other: Read every answers in a topic with more than 10 answers.
       welcome:
         name:
-          other: Welcome
+          other: Ласкаво просимо
         desc:
-          other: Received a up vote.
+          other: Отримав голос.
       nice_share:
         name:
           other: Nice Share
@@ -636,9 +629,9 @@ backend:
           other: Used 50 up votes in a day 20 times.
       promoter:
         name:
-          other: Promoter
+          other: Промоутер
         desc:
-          other: Invited a user.
+          other: Запросив користувача.
       campaigner:
         name:
           other: Campaigner
@@ -646,12 +639,12 @@ backend:
           other: Invited 3 basic users.
       champion:
         name:
-          other: Champion
+          other: Чемпіон
         desc:
-          other: Invited 5 members.
+          other: Запросив 5 учасників.
       thank_you:
         name:
-          other: Thank You
+          other: Дякую
         desc:
           other: Has 20 up voted posts and gave 10 up votes.
       gives_back:
@@ -691,7 +684,7 @@ backend:
           other: Received 1 up vote on 20 posts.
       respected:
         name:
-          other: Respected
+          other: Шанований
         desc:
           other: Received 2 up votes on 100 posts.
       admired:
@@ -701,7 +694,7 @@ backend:
           other: Received 5 up votes on 300 posts.
       solved:
         name:
-          other: Solved
+          other: Вирішено
         desc:
           other: Have an answer be accepted.
       guidance_counsellor:
@@ -785,7 +778,7 @@ backend:
           other: Getting Started
       community:
         name:
-          other: Community
+          other: Спільнота
       posting:
         name:
           other: Posting
@@ -794,7 +787,7 @@ ui:
   how_to_format:
     title: Як відформатувати
     desc: >-
-      <ul class="mb-0"><li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
+      <ul class="mb-0"><li><p class="mb-2">link question or answer: <code>#10010000000000001</code></p></li> <li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
   pagination:
     prev: Назад
     next: Далі
@@ -843,7 +836,7 @@ ui:
       posts: Публікації
       invites: Запрошення
       votes: Голоси
-    answer: Answer
+    answer: Відповідь
     question: Question
     badge_award: Badge
   suspended:
@@ -1037,12 +1030,12 @@ ui:
     x_minutes_ago: "{{count}}m ago"
     x_hours_ago: "{{count}}h ago"
     hour: hour
-    day: day
+    day: день
     hours: hours
-    days: days
+    days: дні
   reaction:
     heart: heart
-    smile: smile
+    smile: посмішка
     frown: frown
     btn_label: add or remove reactions
     undo_emoji: undo {{ emoji }} reaction
@@ -1341,6 +1334,10 @@ ui:
   related_question:
     title: Пов'язані запитання
     answers: відповіді
+  linked_question:
+    title: Linked Questions
+    description: Questions linked to
+    no_linked_question: No questions linked from this question.
   invite_to_answer:
     title: Люди запитували
     desc: Виберіть людей, які, на вашу думку, можуть знати відповідь.
@@ -1361,7 +1358,7 @@ ui:
     answered: answered
     closed_in: Closed in
     show_exist: Показати наявне запитання.
-    useful: Useful
+    useful: Корисне
     question_useful: It is useful and clear
     question_un_useful: It is unclear or not useful
     question_bookmark: Bookmark this question
@@ -1372,10 +1369,10 @@ ui:
       score: Score
       newest: Newest
       oldest: Oldest
-      btn_accept: Accept
+      btn_accept: Прийняти
       btn_accepted: Accepted
     write_answer:
-      title: Your Answer
+      title: Ваша відповідь
       edit_answer: Edit my existing answer
       btn_name: Post your answer
       add_another_answer: Add another answer
@@ -1383,7 +1380,7 @@ ui:
       continue: Continue
       confirm_info: >-
         <p>Are you sure you want to add another answer?</p><p>You could use the edit link to refine and improve your existing answer, instead.</p>
-      empty: Answer cannot be empty.
+      empty: Відповідь не може бути порожньою.
       characters: вміст має бути не менше 6 символів.
       tips:
         header_1: Дякуємо за відповідь
@@ -1424,8 +1421,8 @@ ui:
     save: Зберегти
     delete: Видалити
     undelete: Скасувати видалення
-    list: List
-    unlist: Unlist
+    list: Список
+    unlist: Вилучити зі списку
     unlisted: Unlisted
     login: Увійти
     signup: Зареєструватися
@@ -1449,7 +1446,7 @@ ui:
     unsuspend: Unsuspend
     close: Закрити
     reopen: Відкрити знову
-    ok: OK
+    ok: ОК
     light: Світла
     dark: Темна
     system_setting: Налаштування системи
@@ -1462,7 +1459,7 @@ ui:
     submit: Submit
     normal: Normal
     closed: Closed
-    deleted: Deleted
+    deleted: Видалені
     pending: Pending
     more: More
   search:
@@ -1497,11 +1494,11 @@ ui:
     twitter: Share to Twitter
   cannot_vote_for_self: You can't vote for your own post.
   modal_confirm:
-    title: Error...
+    title: Помилка...
   account_result:
     success: Your new account is confirmed; you will be redirected to the home page.
-    link: Continue to homepage
-    oops: Oops!
+    link: Перейти на головну сторінку
+    oops: Йой!
     invalid: The link you used no longer works.
     confirm_new_email: Your email has been updated.
     confirm_new_email_invalid: >-
@@ -1514,7 +1511,7 @@ ui:
   question:
     following_tags: Підписки на теги
     edit: Edit
-    save: Save
+    save: Зберегти
     follow_tag_tip: Підпишіться на теги, щоб упорядкувати свій список запитань.
     hot_questions: Hot Questions
     all_questions: Всі питання
@@ -1559,6 +1556,7 @@ ui:
     top_questions: Найкращі запитання
     stats: Статистика
     list_empty: No posts found.<br />Perhaps you'd like to select a different tab?
+    content_empty: No posts found.
     accepted: Accepted
     answered: answered
     asked: asked
@@ -1576,17 +1574,17 @@ ui:
     done: Done
     config_yaml_error: Can't create the config.yaml file.
     lang:
-      label: Please choose a language
+      label: Будь ласка, виберіть мову
     db_type:
       label: Database engine
     db_username:
-      label: Username
+      label: Ім'я користувача
       placeholder: root
       msg: Username cannot be empty.
     db_password:
-      label: Password
+      label: Пароль
       placeholder: root
-      msg: Password cannot be empty.
+      msg: Поле паролю не може бути порожнім.
     db_host:
       label: Database host
       placeholder: "db:3306"
@@ -1664,7 +1662,7 @@ ui:
     views: views
     votes: votes
     answers: answers
-    accepted: Accepted
+    accepted: Схвалено
   page_error:
     http_error: HTTP Error {{ code }}
     desc_403: You don't have permission to access this page.
@@ -1681,17 +1679,17 @@ ui:
     users: Users
     badges: Badges
     flags: Відмітки
-    settings: Settings
+    settings: Налаштування
     general: General
     interface: Interface
     smtp: SMTP
     branding: Branding
     legal: Legal
-    write: Write
+    write: Написати
     tos: Terms of Service
     privacy: Privacy
     seo: SEO
-    customize: Customize
+    customize: Персоналізувати
     themes: Themes
     css_html: CSS/HTML
     login: Login
@@ -1707,17 +1705,17 @@ ui:
     modal:
       title: Congratulations
       content: You've earned a new badge.
-      close: Close
+      close: Закрити
       confirm: View badges
     title: Badges
     awarded: Awarded
     earned_×: Earned ×{{ number }}
     ×_awarded: "{{ number }} awarded"
     can_earn_multiple: You can earn this multiple times.
-    earned: Earned
+    earned: Зароблено
   admin:
     admin_header:
-      title: Admin
+      title: Адмін
     dashboard:
       title: Dashboard
       welcome: Welcome to Admin!
@@ -1744,11 +1742,11 @@ ui:
       database_size: "Розмір бази даних:"
       storage_used: "Використаний обсяг пам’яті:"
       uptime: "Uptime:"
-      links: Links
+      links: Посилання
       plugins: Плаґіни
       github: GitHub
       blog: Блоґ
-      contact: Contact
+      contact: Контакт
       forum: Forum
       documents: Документи
       feedback: Відгук
@@ -1777,20 +1775,20 @@ ui:
       review: Огляд
     user_role_modal:
       title: Change user role to...
-      btn_cancel: Cancel
-      btn_submit: Submit
+      btn_cancel: Скасувати
+      btn_submit: Надіслати
     new_password_modal:
-      title: Set new password
+      title: Встановити новий пароль
       form:
         fields:
           password:
-            label: Password
+            label: Пароль
             text: The user will be logged out and need to login again.
             msg: Password must be at 8-32 characters in length.
-      btn_cancel: Cancel
-      btn_submit: Submit
+      btn_cancel: Скасувати
+      btn_submit: Надіслати
     edit_profile_modal:
-      title: Edit profile
+      title: Редагувати профіль
       form:
         fields:
           display_name:
@@ -1800,13 +1798,13 @@ ui:
             label: Username
             msg_range: Username up to 30 characters.
           email:
-            label: Email
+            label: Електронна пошта
             msg_invalid: Invalid Email Address.
       edit_success: Edited successfully
-      btn_cancel: Cancel
-      btn_submit: Submit
+      btn_cancel: Скасувати
+      btn_submit: Надіслати
     user_modal:
-      title: Add new user
+      title: Додати нового користувача
       form:
         fields:
           users:
@@ -1818,17 +1816,17 @@ ui:
             label: Ім'я для відображення
             msg: Ім'я для відображення повинно мати довжину від 2 до 30 символів.
           email:
-            label: Email
+            label: Електронна пошта
             msg: Email is not valid.
           password:
-            label: Password
+            label: Пароль
             msg: Password must be at 8-32 characters in length.
-      btn_cancel: Cancel
-      btn_submit: Submit
+      btn_cancel: Скасувати
+      btn_submit: Надіслати
     users:
-      title: Users
-      name: Name
-      email: Email
+      title: Користувачі
+      name: Ім’я
+      email: Електронна пошта
       reputation: Reputation
       created_at: Created Time
       delete_at: Deleted Time
@@ -1870,7 +1868,7 @@ ui:
     questions:
       page_title: Запитання
       unlisted: Unlisted
-      post: Post
+      post: Опублікувати
       votes: Votes
       answers: Answers
       created: Створені
@@ -1993,7 +1991,7 @@ ui:
         label: Політика конфіденційности
         text: "Ви можете додати вміст політики конфіденційності тут. Якщо у вас уже є документ, розміщений деінде, надайте тут повну URL-адресу."
     write:
-      page_title: Write
+      page_title: Написати
       restrict_answer:
         title: Answer write
         label: Кожен користувач може написати лише одну відповідь на кожне запитання
@@ -2028,7 +2026,7 @@ ui:
       navbar_style:
         label: Navbar style
       primary_color:
-        label: Primary color
+        label: Основний колір
         text: Modify the colors used by your themes
     css_and_html:
       page_title: CSS and HTML
@@ -2051,7 +2049,7 @@ ui:
         label: Sidebar
         text: This will insert in sidebar.
     login:
-      page_title: Login
+      page_title: Увійти
       membership:
         title: Membership
         label: Дозволити нові реєстрації
@@ -2082,15 +2080,15 @@ ui:
       plugins:
         label: Plugins
         text: Select an existing plugin.
-      name: Name
+      name: Ім’я
       version: Version
       status: Status
       action: Action
       deactivate: Deactivate
       activate: Activate
-      settings: Settings
+      settings: Налаштування
     settings_users:
-      title: Users
+      title: Користувачі
       avatar:
         label: Default avatar
         text: For users without a custom avatar of their own.
@@ -2130,17 +2128,17 @@ ui:
         placeholder: Filter by name, badge:id
       group: Group
       inactive: Inactive
-      name: Name
+      name: Ім’я
       show_logs: Show logs
       status: Status
       title: Badges
   form:
     optional: (optional)
-    empty: cannot be empty
+    empty: не може бути порожнім
     invalid: is invalid
-    btn_submit: Save
+    btn_submit: Зберегти
     not_found_props: "Required property {{ key }} not found."
-    select: Select
+    select: Вибрати
   page_review:
     review: Review
     proposed: proposed
