--- a/i18n/zh_CN.yaml
+++ b/i18n/zh_CN.yaml
@@ -326,9 +326,7 @@ backend:
       name:
         other: 粗鲁或辱骂的
       desc:
-        other:
-          - 一个有理智的人都会认为这种内容不适合进行尊重性的讨论。
-          - 论坛
+        other: "一个有理智的人都会认为这种内容不适合进行尊重性的讨论。"
     a_duplicate:
       name:
         other: 重复内容
@@ -340,10 +338,7 @@ backend:
       name:
         other: 不是答案
       desc:
-        other:
-          - 这张贴作为答案，但它不会试图回答
-          - 这可能是一个编辑、一个评论、另一个问题。
-          - 或全部删除。
+        other: "该帖是作为答案发布的，但它并没有试图回答这个问题。总之，它可能应该是个编辑、评论、另一个问题或者需要被删除。"
     no_longer_needed:
       name:
         other: 不再需要
@@ -402,9 +397,7 @@ backend:
         name:
           other: 需要细节或澄清
         desc:
-          other:
-            - 该问题目前涵盖多个问题。它应该侧重在一个问题上。
-            - 只关注一个问题。
+          other: 该问题目前涵盖多个问题。它应该只集中在一个问题上。
       other:
         name:
           other: 其他原因
@@ -688,7 +681,7 @@ backend:
         name:
           other: 欣赏
         desc:
-          other: 20个员额获得1次补票。
+          other: 在 20 个帖子中获得 1个投票
       respected:
         name:
           other: 尊敬
@@ -1185,7 +1178,7 @@ ui:
       label: 名字
       msg:
         empty: 名字不能为空
-        range: 名字应该在 2 到 30 个字符之间
+        range: 名称长度必须在 2 至 30 个字符之间。
         character: '只能由 "a-z"、"A-Z"、"0-9"、" - . _" 组成'
     email:
       label: 邮箱
@@ -1342,8 +1335,9 @@ ui:
     title: 相关问题
     answers: 个回答
   linked_question:
-    title: 关联问题
-    no_linked_question: 没有关联的问题。
+    title: 关联的问题
+    description: 问题关联到
+    no_linked_question: 这个问题没有相关联的问题。
   invite_to_answer:
     title: 受邀人
     desc: 邀请你认为可能知道答案的人。
